--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="styles.css" rel="stylesheet">
   <link href="assets/icons/material-icons.css" rel="stylesheet">
-<link href="styles.945dbbd4fa9faad00292.bundle.css" rel="stylesheet"/></head>
+</head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="inline.fb3778d298cde02c438d.bundle.js"></script><script type="text/javascript" src="polyfills.e2b46b744d5d5ff2047b.bundle.js"></script><script type="text/javascript" src="vendor.5d83830828641a61334c.bundle.js"></script><script type="text/javascript" src="main.1d8850638cd2fe784867.bundle.js"></script></body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
