--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>AngularShop</title>
-  <base href="./">
+  <base href="https://philippmelnikov.github.io/AngularShop/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="styles.css" rel="stylesheet">
   <link href="assets/icons/material-icons.css" rel="stylesheet">
-</head>
+<link href="styles.945dbbd4fa9faad00292.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.ee6b80316145f89d0bc9.bundle.js"></script><script type="text/javascript" src="polyfills.e2b46b744d5d5ff2047b.bundle.js"></script><script type="text/javascript" src="vendor.5d83830828641a61334c.bundle.js"></script><script type="text/javascript" src="main.9b344b523b4e8989d05a.bundle.js"></script></body>
 </html>
